kubernetes/clusters/k0s/ingress/nginx/external-ingress/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: ingress
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: ingress
subsets:
- addresses:
  - ip: "${INGRESS_UNIFI_IP}"
  ports:
  - name: http
    port: 443
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "unifi.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: unifi
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "unifi.${DOMAIN}"
