kubernetes/clusters/k0s/ingress/nginx/external-ingress/vacuum.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vacuum
  namespace: ingress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vacuum
  namespace: ingress
subsets:
- addresses:
  - ip: "${INGRESS_VACUUM_IP}"
  ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacuum
  namespace: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "vacuum.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: vacuum
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "vacuum.${DOMAIN}"
