kubernetes/clusters/k0s/ingress/nginx/external-ingress/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
  egress:
    # adguard
    - toCIDRSet:
        - cidr: "${INGRESS_ADGUARD_IP}/32"
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # drac
    - toCIDRSet:
        - cidr: "${INGRESS_DRAC_IP}/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # proxmox
    - toCIDRSet:
        - cidr: "${INGRESS_PROXMOX_IP}/32"
      toPorts:
        - ports:
            - port: "8002"
              protocol: TCP
    # unifi
    - toCIDRSet:
        - cidr: "${INGRESS_UNIFI_IP}/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # vacuum
    - toCIDRSet:
        - cidr: "${INGRESS_VACUUM_IP}/32"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
